--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body>
     <h1>Hello World</h1>
 
-    <p> this is a paragraph to test git</p>
+    <p> this is not a paragraph</p>
         
     </body>
 </html>
