--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <h1>Hello World</h1>
 
     <p> this is not a paragraph</p>
+
+    <p>but this is a paragraph</p>
         
     </body>
 </html>
